# ncframe

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  hello.cpp  main.cpp  ncfConfig.h.in  ncf_ctl.h  ncf_win.h  unittest.cpp
demo/: demo.cpp  demo0.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h
ncframe/: CMakeLists.txt  ncf_app.h  ncf_ctl.cpp  ncf_ctl.h  ncf_mdl.cpp  ncf_mdl.h  ncf_win.h  ncframe.cpp  ncframe.h  ncfw_lines.h
unittest/: unittest.cpp
